--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -33,6 +33,11 @@
 //蒙层颜色
 @Wrapper:#000;
 
+@navigation-height : 56px;
+@max-mobile-width : 600px;
+@pad-portrait-width : 1024px;
+@pad-landscape-width : 768px;
+
 //兼容浏览器的flex
 .myflex(@y){
   display: -webkit-box;
