优化全局的页面高度

--- a/src/static/css/BlogIndex.less
+++ b/src/static/css/BlogIndex.less
@@ -113,6 +113,9 @@
 
 /*移动端*/
 @media only screen and (max-device-width : 768px) {
+  .blog-index-page {
+     padding-top: 56px;
+  }
   .BlogIndexContent {
     padding: 0 1rem;
   }
