--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -93,3 +93,19 @@ html {
 .Fade-enter, .Fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
 }
+// ::-webkit-scrollbar {
+//   width: 10px;
+//   height: 10px;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   border-radius: 10px;
+//   background: hsl(180, 2%, 80%);
+//   box-shadow: none;
+// }
+
+// ::-webkit-scrollbar-track {
+//   border-radius: 10px;
+//   background: rgba(0, 0, 0, 0);
+//   box-shadow: none;
+// }
