--- a/src/static/css/BlogIndex.less
+++ b/src/static/css/BlogIndex.less
@@ -2,6 +2,9 @@
 
 /*pc端*/
 @media only screen and (min-device-width : 768px) {
+  .blog-index-page {
+    padding-top: 76px;
+ }
   .BlogIndexContent {
     width: 1088px;
     margin: 0 auto;
